2009-01-28  Elliott Baron  <ebaron@redhat.com>

	* feature.xml: Removed feature dependency, added console deps for launch.

2009-01-14  Andrew Overholt  <overholt@redhat.com>

	* feature.xml: Re-add update site information (sorry).

2009-01-14  Elliott Baron  <ebaron@redhat.com>

	* feature.xml: Removed update site information.

2009-01-09  Elliott Baron  <ebaron@redhat.com>

	* feature.xml: Added all used BIRT plugins as dependencies.

2009-01-08  Elliott Baron  <ebaron@redhat.com>

	* feature.xml: Added org.eclipse.linuxtools.profiling-feature to dependencies.

2009-01-06  Andrew Overholt  <overholt@redhat.com>

	* feature.xml: Remove Linux requirement to see if it then gets included in all
	feature. Added update site information.

2008-12-16  Elliott Baron  <ebaron@redhat.com>

	* feature.xml: Added dependencies and Linux requirement.

2008-12-10  Andrew Overholt  <overholt@redhat.com>

	* build.properties: Inital checkin.
	* feature.xml: Likewise.
	* feature.properties: Likewise.
	* epl-v10.html: Likewise.